--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
       run: npm run type-check --if-present
       
     - name: Run tests
-      run: npm test -- --reporter=verbose --coverage
+      run: npm run test:ci
       
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
@@ -81,12 +81,6 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
@@ -98,9 +92,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: |
-          ${{ secrets.DOCKER_USERNAME }}/pathfinding-visualizer
-          ghcr.io/${{ github.repository }}
+        images: ghcr.io/${{ github.repository }}
         tags: |
           type=ref,event=branch
           type=ref,event=pr
