fix: resolve SonarCloud and workflow issues
- Remove deprecated SonarCloud scan from quality workflow
- Fix test commands to use npm run test:ci in all workflows
- Disable SonarCloud configuration file to prevent automatic scanning
- Remove dependency on SONAR_TOKEN secret
- Clean up workflow to focus on essential quality checks

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -30,13 +30,7 @@ jobs:
       run: npm run lint -- --format=json --output-file=eslint-report.json || true
       
     - name: Run tests with coverage
-      run: npm test -- --coverage
-      
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: npm run test:ci
         
   performance-budget:
     name: Performance Budget
