--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -72,7 +72,7 @@ jobs:
         npm install
         
     - name: Run tests
-      run: npm test
+      run: npm run test:ci
       
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v5
