fix: disable deployment steps until servers are configured
- Temporarily disable staging and production deployments
- Prevents SSH connection failures in CI/CD pipeline
- Docker images are still built and available in GitHub Container Registry
- Can be re-enabled when production infrastructure is ready

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -119,7 +119,7 @@ jobs:
     name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: [docker]
-    if: github.ref == 'refs/heads/develop'
+    if: false  # Disabled until staging server is configured
     environment: staging
     
     steps:
@@ -139,7 +139,7 @@ jobs:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: [docker]
-    if: github.ref == 'refs/heads/main'
+    if: false  # Disabled until production server is configured
     environment: production
     
     steps:
